# ClimaSafe

./: .copier-answers.yml  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  experimento_label_sin_fuga.py  main.py  mlflow.db  pyproject.toml  tasks.py
.github/workflows/: paper_scout.yml
.opencode/: orchestrator.md
.vault/.obsidian/: graph.json  workspace.json
.vault/00_META/: IA_index.md
.vault/01_PROYECTO/: agentes.md  arquitectura.md  modelos.md  roadmap.md
.vault/02_DATOS/: features.md  fuentes.md
.vault/03_MODELOS/: KNN.md  LSTM.md  MLflow.md  RandomForest_calor.md  RandomForest_frio.md  XGBoost_calor.md  XGBoost_frio.md  hiperparametros.md
.vault/04_VISUALIZACIONES/: grafo_conocimiento.md
.vault/05_AGENTES/: APIAgent.md  CICDAgent.md  DataAgent.md  DependencyAgent.md  DockerAgent.md  DocumentationAgent.md  GitAgent.md  GraphAgent.md  InstallerAgent.md  MLAgent.md  MLflowAgent.md  NotebookAgent.md  ReviewAgent.md  SecretsAgent.md  TestAgent.md  _index.md
.vault/06_OBSERVACIONES/: 2026-07-09_inicio_vault.md  2026-07-09_organizacion_graphify.md  2026-07-14_actualizacion_pipeline.md  2026-07-15_optimizacion_lstm.md  2026-07-16_fusion_ensemble_explicabilidad.md
.vault/07_REFERENCIAS/: papers.md
agents/: README.md  __init__.py  __main__.py  audit.py  cli.py  config.py  context.py  contracts.py  exceptions.py  helpers.py  orchestrator.py  paper_scout.py
agents/agents/: __init__.py  _template_agent.py  api_agent.py  audit_agent.py  cache_agent.py  cicd_agent.py  data_agent.py  dependency_agent.py  docker_agent.py  docsearch_agent.py  doctor_agent.py  documentation_agent.py  env_agent.py  git_agent.py  graph_agent.py  installer_agent.py  knowledge_agent.py  make_agent.py  ml_agent.py  mlflow_agent.py  notebook_agent.py  plan_agent.py  refactor_agent.py  research_agent.py  review_agent.py  schedule_agent.py  secrets_agent.py  supervisor_agent.py  test_agent.py
agents/core/: __init__.py  base_agent.py  registry.py
agents/gstack/: __init__.py  pipelines.py  stack.py
agents/prompts/: api_agent.md  audit_agent.md  cicd_agent.md  data_agent.md  dependency_agent.md  docker_agent.md  docsearch_agent.md  doctor_agent.md  documentation_agent.md  env_agent.md  git_agent.md  graph_agent.md  installer_agent.md  knowledge_agent.md  make_agent.md  ml_agent.md  mlflow_agent.md  notebook_agent.md  orchestrator.md  plan_agent.md  refactor_agent.md  research_agent.md  review_agent.md  schedule_agent.md  secrets_agent.md  supervisor_agent.md  test_agent.md
agents/tests/: __init__.py  conftest.py  test_api_agent.py  test_audit.py  test_capability_collisions.py  test_cicd_agent.py  test_code_analysis_tool.py  test_config_context.py  test_contracts.py  test_dataframe_analysis_tool.py  test_dependency_agent.py  test_docker_tool.py  test_git_agent.py  test_git_commit_with_changelog.py  test_git_tag_release.py  test_graphify_tool.py  test_installer_agent.py  test_mlflow_agent.py  test_notebook_agent.py  test_orchestrator.py  (+4 more)
chat/: app.py  entrypoint.sh
data/: factores_riesgo.json  schema.sql
documenatcion/: agentes_ia.md  conclusiones_modelos.md  diseño_modelo.md  evaluacion_fuentes_externas.md  formulas_ml_resumen.md  formulas_riesgo_deterministico.md
documentacion/: README.md  coeficientes_personalizacion_riesgo.md  conclusion-base-conocimiento.md  conclusiones_modelos.md  conformal_prediction.md  diseño_modelo.md  formulas_ml_resumen.md  label_sin_fuga.md  lstm_hibrida.md  proximos_pasos.md
experimentos/: 01_xgb_frio.py  02_lstm_calibracion_ensemble.py  03_lstm_peso_extra.py  04_sintetico.py  05_mejoras.py
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  .graphify_python  .graphify_root  .graphify_semantic_marker  GRAPH_REPORT.md  graph.json  graph.json.bak  manifest.json
monitoring/: monitor.py
notebooks/: 0-0-Calor-DescargaDatos.ipynb  0-0-Frio-DescargaDatos.ipynb  0-1-Calor-ProcesamientoDatos.ipynb  0-1-Frio-ProcesamientoDatos.ipynb  0-2-Calor-Ejecucion.ipynb  0-2-Frio-Ejecucion.ipynb  0-3-LSTM-Ejecucion.ipynb  0-4-ConformalPrediction.ipynb  mlflow.db
scripts/: entrenar_active_learner.py
tests/: conftest.py  manual_analysis.py  test_api.py  test_build_features.py  test_labels.py  test_make_dataset.py  test_monitoring.py  test_paths.py  test_personalizacion.py  test_predict_model.py  test_proba.py  test_train_model.py  test_tuning.py  test_visualize.py
tuning/: ablacion_27v19.py  baseline_lightgbm.py  calibracion_umbrales.py  calibrar_umbrales.py  features_frio.py  tune_model.py
(+262 files in other folders)
